manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ilab-client-route
  labels:
    app: ilab-client
spec:
  to:
    kind: Service
    name: ilab-client-service
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
