manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ilab-client-vs
  labels:
    app: ilab-client
spec:
  hosts:
  - "*"
  gateways:
  - ilab-client-gateway
  http:
  - match:
    - uri:
        prefix: /ilabchat
    rewrite:
      uri: /
    route:
    - destination:
        host: ilab-client-service
        port:
          number: 5000
